# natsuyume

./: CMakeLists.txt  Main.qml  README.md  main.cpp  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  natsuyume_bridge.cpp
android/app/src/main/kotlin/com/example/natsuyume/: MainActivity.kt
android/app/src/main/kotlin/com/isaaccodesstuff/natsuyume/: MainActivity.kt
android/jni/include/: unicode
core/: CMakeLists.txt  albumcoverprovider.cpp  albumcoverprovider.h  coverimageprovider.cpp  coverimageprovider.h  fileindexer.cpp  fileindexer.h  library.cpp  library.h  lrcparser.h  natsuyumecore.cpp  natsuyumecore.h  player.cpp  player.h  track.h  trackcoverprovider.cpp  trackcoverprovider.h
core/src/cli/: main_cli.cpp
core/src/core/: coretypes.h  lrcparser.cpp  lrcparser.h  natsuyumecore.cpp  natsuyumecore.h
core/src/domain/: track.cpp  track.h
core/src/playback/: playback.cpp  playback.h  queue.cpp  queue.h
core/src/player/: librarymanager.cpp  librarymanager.h  playbackmanager.cpp  playbackmanager.h  queuemanager.cpp  queuemanager.h  queuesession.cpp  queuesession.h  userdatamanager.cpp  userdatamanager.h
domain/: track.cpp  track.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: cover_service.dart  library_types.dart  natsuyume_bindings.dart  natsuyume_core.dart
lib/onboarding/: onboarding_flow.dart
lib/onboarding/screens/: allset_screen.dart  folder_screen.dart  theme_screen.dart  welcome_screen.dart
lib/player/: player_shell.dart
lib/player/screens/: album_detail_screen.dart  album_info_overlay.dart  albums_screen.dart  artist_detail_screen.dart  artist_editor_screen.dart  artist_info_overlay.dart  artists_screen.dart  collection_editor_screen.dart  lyrics_editor_screen.dart  metadata_editor_screen.dart  more_screen.dart  now_playing_screen.dart  playlist_detail_screen.dart  playlist_editor_screen.dart  playlist_info_overlay.dart  playlist_organizer_screen.dart  playlists_screen.dart  queue_screen.dart
lib/player/screens/context_menus/: album_detail_context_menu.dart  album_tab_context_menu.dart  album_track_context_menu.dart  album_track_multiselect_menu.dart  artist_detail_context_menu.dart  artist_tab_context_menu.dart  artist_track_context_menu.dart  artist_track_multiselect_menu.dart  playlist_detail_context_menu.dart  playlist_tab_context_menu.dart  playlist_track_context_menu.dart  playlist_track_multiselect_menu.dart  queue_context_menu.dart  queue_multiselect_menu.dart
lib/player/screens/settings/: about_settings.dart  advanced_settings.dart  backup_settings.dart  easter_egg_screen.dart  library_settings.dart  manual_theme_screen.dart  playback_settings.dart  settings_settings.dart  theme_settings.dart  unlocked_themes_screen.dart
lib/theme/: natsuyume_theme.dart  theme_registry.dart
lib/widgets/: album_grid_item.dart  album_list_item.dart  album_track_list.dart  artist_album_list.dart  bottom_nav_bar.dart  collection_detail_bar.dart  collection_info_overlay.dart  context_menu.dart  library_top_bar.dart  mini_player.dart  now_playing_bar.dart  playlist_track_list.dart  queue_dialog.dart  queue_fab.dart  settings_section.dart  settings_tile.dart  slide_route.dart  sort_dialog.dart  squiggly_slider.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
manager/: metadata.cpp  metadata.h  playback.cpp  playback.h  queue.cpp  queue.h
playback/: playback.cpp  playback.h  queue.cpp  queue.h
player/: librarymanager.cpp  librarymanager.h  playbackmanager.cpp  playbackmanager.h  playercontroller.cpp  playercontroller.h  playlistmanager.cpp  playlistmanager.h  queuemanager.cpp  queuemanager.h  queuesession.cpp
test/: widget_test.dart
ui/: AlbumCover.qml  ContextMenu.qml  FilePicker.qml  Lyrics.qml  NavBar.qml  NowPlaying.qml  PlaylistPicker.qml  QueuePicker.qml  Sidebar.qml  SongInfo.qml  SortBar.qml  SortIconButton.qml  TrackRow.qml
ui/sidebar/: AlbumsView.qml  ArtistsView.qml  PlaylistsView.qml  QueuesView.qml  SettingsView.qml
ui/sidebar/albums/: AlbumGrid.qml  AlbumSortBar.qml  AlbumTrackList.qml  TrackSortBar.qml
ui/sidebar/artists/: ArtistTrackList.qml
ui/sidebar/playlists/: PlaylistTrackList.qml
ui/sidebar/queues/: QueueAddButton.qml  QueueDropdown.qml  QueueSortMenu.qml  QueueTopBar.qml  QueueTrackList.qml  SaveAsPlaylistDialog.qml
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
